Problem with meet out coaches index button. fixed by wrapping a tag around full button. Add CSS style to remove purple underline effect

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,6 +284,11 @@ div>iframe {
     color: #dbbb02;
 }
 
+#meet-button a {
+    text-decoration: none;
+    color: #dbbb02;
+}
+
 #timetable-button:active {
     background-color: rgba(1, 14, 53, 0.8);
     box-shadow: 0 5px #666;
@@ -336,4 +341,14 @@ footer p {
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+}
+
+#coach-vinnie, #coach-leroy {
+    height: 400px;
+    width: 600px;
+    background-color: rgba(26, 42, 90, .8);
+    border-radius: 15px 50px;
+    text-align: center;
+    padding-top: 30px;
+    box-shadow: 5px 10px;
 }
